--- a/src/app/create-employee/create-employee.component.html
+++ b/src/app/create-employee/create-employee.component.html
@@ -5,7 +5,7 @@
     <div class="form-group">
         <label> First Name</label>
         <input type="text" class="form-control" id="firstName"
-        [(ngModel)]="employee.firstName" name="firstName">
+        [(ngModel)]="employee.firstName" name="firstName" ng-required="employee.firstName">
     </div>
     <div class="form-group">
         <label> Last Name</label>
